Gnome: Fix wrong background color in calculator app

--- a/gtk-4.0/gtk.css
+++ b/gtk-4.0/gtk.css
@@ -220,19 +220,27 @@ read if you used those and something break with a version upgrade you're on your
     color: #fff;
     background-color: #cd7ebf; }
 
-.view, iconview,
+.history-view,
+.view,
+iconview,
 .view text,
 iconview text,
 textview text {
   color: #d8dee9;
   background-color: #2e394c; }
-  .view:backdrop, iconview:backdrop,
+  .history-view:backdrop,
+  .view:backdrop,
+  iconview:backdrop,
   .view text:backdrop,
   iconview text:backdrop,
   textview text:backdrop {
     color: #b6bdca;
     background-color: #303b4f; }
-  .view:selected:focus, iconview:selected:focus, .view:selected, iconview:selected,
+  .history-view:selected:focus, .history-view:selected,
+  .view:selected:focus,
+  iconview:selected:focus,
+  .view:selected,
+  iconview:selected,
   .view text:selected:focus,
   iconview text:selected:focus,
   textview text:selected:focus,
@@ -4601,7 +4609,11 @@ headerbar.selection-mode button.titlebutton,
   .titlebar.selection-mode button.titlebutton:backdrop {
     -gtk-icon-shadow: none; }
 
-.view:selected:focus, iconview:selected:focus, .view:selected, iconview:selected,
+.history-view:selected:focus, .history-view:selected,
+.view:selected:focus,
+iconview:selected:focus,
+.view:selected,
+iconview:selected,
 .view text:selected:focus,
 iconview text:selected:focus,
 textview text:selected:focus,
@@ -4616,7 +4628,11 @@ entry selection, row:selected, columnview.view:selected:focus, columnview.view:s
 treeview.view:selected:focus,
 treeview.view:selected {
   background-color: #cd7ebf; }
-  row:selected label, label:selected, .selection-mode windowcontrols button, .view:selected:focus, iconview:selected:focus, .view:selected, iconview:selected,
+  row:selected label, label:selected, .selection-mode windowcontrols button, .history-view:selected:focus, .history-view:selected,
+  .view:selected:focus,
+  iconview:selected:focus,
+  .view:selected,
+  iconview:selected,
   .view text:selected:focus,
   iconview text:selected:focus,
   textview text:selected:focus,
@@ -4632,7 +4648,10 @@ treeview.view:selected {
   treeview.view:selected {
     color: #fff;
     font-weight: normal; }
-    row:selected label:disabled, label:disabled:selected, .selection-mode windowcontrols button:disabled, iconview:disabled:selected:focus, .view:disabled:selected, iconview:disabled:selected,
+    row:selected label:disabled, label:disabled:selected, .selection-mode windowcontrols button:disabled, .history-view:disabled:selected,
+    iconview:disabled:selected:focus,
+    .view:disabled:selected,
+    iconview:disabled:selected,
     iconview text:disabled:selected:focus,
     textview text:disabled:selected:focus,
     .view text:disabled:selected,
@@ -4642,7 +4661,10 @@ treeview.view:selected {
     .menuitem.button.flat:disabled:selected, calendar:disabled:selected, spinbutton:not(.vertical) selection:disabled,
     entry selection:disabled, row:disabled:selected {
       color: #e6bfdf; }
-    row:selected label:backdrop, label:backdrop:selected, .selection-mode windowcontrols button:backdrop, iconview:backdrop:selected:focus, .view:backdrop:selected, iconview:backdrop:selected,
+    row:selected label:backdrop, label:backdrop:selected, .selection-mode windowcontrols button:backdrop, .history-view:backdrop:selected,
+    iconview:backdrop:selected:focus,
+    .view:backdrop:selected,
+    iconview:backdrop:selected,
     iconview text:backdrop:selected:focus,
     textview text:backdrop:selected:focus,
     .view text:backdrop:selected,
@@ -4652,7 +4674,9 @@ treeview.view:selected {
     .menuitem.button.flat:backdrop:selected, calendar:backdrop:selected, spinbutton:not(.vertical) selection:backdrop,
     entry selection:backdrop, row:backdrop:selected {
       color: rgba(255, 255, 255, 0.5); }
-      row:selected label:backdrop:disabled, label:backdrop:disabled:selected, .selection-mode windowcontrols button:backdrop:disabled, .view:backdrop:disabled:selected, iconview:backdrop:disabled:selected,
+      row:selected label:backdrop:disabled, label:backdrop:disabled:selected, .selection-mode windowcontrols button:backdrop:disabled, .history-view:backdrop:disabled:selected,
+      .view:backdrop:disabled:selected,
+      iconview:backdrop:disabled:selected,
       .view text:backdrop:disabled:selected,
       iconview text:backdrop:disabled:selected,
       textview text:backdrop:disabled:selected, .view text selection:backdrop:disabled, iconview text selection:backdrop:disabled,
